--- a/jour3-blog/package.json
+++ b/jour3-blog/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
     "joi": "^17.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
