--- a/jour3-blog/package.json
+++ b/jour3-blog/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.2.3",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "joi": "^17.7.0",
